<resources>
    <string name="app_name">PlantsIrrigationSystem</string>
    <string name="emailLabelHintStr">Email</string>
    <string name="havingAccountStr">Already have an account? Sign in here</string>
    <string name="signUpBtnText">Sign Up</string>
    <string name="passwordInputHintStr">Password</string>
    <string name="signUpHereString">Not registered? Sign Up here!</string>
    <string name="signInBtnText">Sign In</string>
    <string name="loginSucessText">You have successfully logged in!!!</string>
    <string name="addNewBrokerString">Add new MQTT broker</string>
    <string name="showTopicsStr"><u>Show topics</u></string>
    <string name="subsBtnString">Subscribe</string>
    <string name="unsubscribeBtnString">Unsub</string>
    <string name="showPlantsTvStr"><u>Show Plants</u></string>
    <string name="listOfBrokersTitleStr">Current MQTT Brokers</string>
    <string name="title_activity_plant_manager">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_plant_irrigation">Plant Irrigation</string>
    <string name="title_realtime_data">Realtime-data</string>
    <string name="title_irrigation_history">Irrigation History</string>
    <string name="plant_info_title">Plant Info</string>
    <string name="scientific_name_tv_title">Scientific name:</string>
    <string name="plant_family_title_str">Plant Family:</string>
    <string name="current_mqtt_broker_title_str"><u>Current MQTT Broker</u></string>
    <string name="connection_status_title_str">Connection Status:</string>
    <string name="pump_management_tiltle_str"><b><i><u>Pump Management</u></i></b></string>
    <string name="moisture_management_title_str"><b><u><i>Moisture Management</i></u></b></string>
    <string name="desired_moisture_hint">Please enter desired moisture (in %)</string>
    <string name="delayed_start_management_title"><b><i><u>Delayed Pump Start Management</u></i></b></string>
    <string name="submit_moister_btn">Submit</string>
    <string name="set_date_btn">Set date</string>
    <string name="set_time_str">Set time</string>
    <string name="running_task_tv_title">Running Task :</string>
    <string name="observed_plant_tv_title">Observed Plant :</string>
    <string name="live_data_tv"><b><i><u>Live Data</u></i></b></string>
    <string name="soil_moisture_live_graphic_title"><b><i><u>Soil Moisture Live Graphic</u></i></b></string>
    <string name="plant_irrig_history_titlestr"><b><i><u>History Of Plant\'s Irrigation</u></i></b></string>
    <string name="date_title_str"><b>Date</b></string>
    <string name="start_time_titlestr"><b>Start</b></string>
    <string name="end_time_titlestr"><b>End</b></string>
    <string name="moisture_irrig_hist_titlestr"><b>Moisture (%)</b></string>
    <string name="tips_tv_str"><u>Tips for watering this plant</u></string>
</resources>