<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navmenu.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/plantImageHomeMenu"
            android:layout_width="160dp"
            android:layout_height="174dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/plantInfoTv"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/delius"
            android:text="@string/plant_info_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scientificNameTitleTv"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_toRightOf="@+id/plantImageHomeMenu"
            android:fontFamily="@font/delius"
            android:text="@string/scientific_name_tv_title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantScientificName"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scientificNameTitleTv"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/plantImageHomeMenu"
            android:fontFamily="@font/delius"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/familyNameTitleTv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/plantScientificName"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/plantImageHomeMenu"
            android:fontFamily="@font/delius"
            android:text="@string/plant_family_title_str"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantFamilyName"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/familyNameTitleTv"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@+id/plantImageHomeMenu"
            android:fontFamily="@font/delius"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/brokerManagementTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plantImageHomeMenu"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/delius"
            android:layout_marginLeft="30dp"
            android:text="@string/current_mqtt_broker_title_str"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentPlantBrokerName"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/brokerManagementTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/delius"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentPlantBrokerIp"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentPlantBrokerName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/delius"
            android:textSize="17sp" />

        <Button
            android:id="@+id/connectAndSubBrokerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentPlantBrokerIp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="Connect &amp;\n Subscribe "
            android:textSize="12sp" />

        <Button
            android:id="@+id/disconnectBrokerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="417dp"
            android:layout_toRightOf="@id/connectAndSubBrokerBtn"
            android:text="Disconnect"
            android:textSize="12sp" />

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>